# opengl-learn

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  glad.c
src/task01/: CMakeLists.txt  main.cpp
src/task02/: CMakeLists.txt  main.cpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  window_manager.cpp  window_manager.hpp
src/task02/shaders/: fragment_shader_01.glsl  vertex_shader_01.glsl
